--- a/app/templates/base.html.twig
+++ b/app/templates/base.html.twig
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" data-bs-theme="light">
     <head>
         <meta charset="UTF-8">
+        <meta name="apple-mobile-web-app-capable" content="yes">
+
         <title>{% block title %}Welcome!{% endblock %}</title>
+
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
+        <link href="{{ absolute_url(asset('css/bootstrap.min.css', 'bootstrap')) }}" rel="stylesheet">
+        <link rel="stylesheet" href="{{ absolute_url(asset('css/bootstrap-icons.min.css', 'bootstrap')) }}">
+
         {% block stylesheets %}
         {% endblock %}
 
@@ -11,6 +17,13 @@
         {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+        {% block icons %}{% endblock %}
+
+        {% block header %}{% endblock %}
+
+        {% block content %}{% endblock %}
+        <script src="{{ absolute_url(asset('js/bootstrap.bundle.min.js', 'bootstrap')) }}"></script>
+
+        {% block javascriptsendpage %}{% endblock %}
     </body>
 </html>
