--- a/app/templates/landing-page/index.html.twig
+++ b/app/templates/landing-page/index.html.twig
@@ -187,11 +187,27 @@
 
     <!-- Hero Section -->
     <section class="hero">
-        <div class="container">
-            <h1>Land Your Dream Job with an AI-Powered Resume</h1>
-            <p>Let our AI create the perfect resume to showcase your skills and get you hired faster.</p>
-            <button class="btn btn-primary btn-lg">Create Your Resume Now</button>
+        <div class="container col-xxl-8 px-4 py-5">
+            <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+                <div class="col-10 col-sm-8 col-lg-6">
+                    <img src="{{ absolute_url(asset('undraw_online_test_re_kyfx.svg', 'img')) }}" class="d-block mx-lg-auto img-fluid" alt="creativity" loading="lazy">
+                </div>
+                <div class="col-lg-6 text-start">
+                    <h1 class="display-5 fw-bold lh-1 mb-3 text-white">Land Your Dream Job with an AI-Powered Resume</h1>
+                    <p class="lead text-white">Let our AI create the perfect resume to showcase your skills and get you hired faster.</p>
+                    <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+                        <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Create Your Resume Now</button>
+{#                        <button type="button" class="btn btn-outline-secondary btn-lg px-4">More Info</button>#}
+                    </div>
+                </div>
+            </div>
         </div>
+
+{#        <div class="container">#}
+{#            <h1>Land Your Dream Job with an AI-Powered Resume</h1>#}
+{#            <p>Let our AI create the perfect resume to showcase your skills and get you hired faster.</p>#}
+{#            <button class="btn btn-primary btn-lg">Create Your Resume Now</button>#}
+{#        </div>#}
     </section>
 
 </div>
