--- a/app/templates/landing-page/components/sections/header/fixed-top.html.twig
+++ b/app/templates/landing-page/components/sections/header/fixed-top.html.twig
@@ -38,11 +38,8 @@
                         <a class="nav-link" href="#contact">Contact</a>
                     </li>
                 </ul>
-                <button
-                    class="btn btn-primary rounded-5 ms-auto"
-                >
-                    Get Started
-                </button>
+
+                {% include 'landing-page/components/buttons/subscription.html.twig' with {'classes': 'ms-auto'} %}
             </div>
 
         </div>
