--- a/app/templates/landing-page/components/sections/pricing/standard-3-in-row.html.twig
+++ b/app/templates/landing-page/components/sections/pricing/standard-3-in-row.html.twig
@@ -20,7 +20,7 @@
 
                     <div class="price text-primary">$9.99</div>
 
-                    <button class="btn btn-primary rounded-5">Get Started</button>
+                    {% include 'landing-page/components/buttons/subscription.html.twig'%}
                 </div>
             </div>
 
@@ -38,7 +38,7 @@
 
                     <div class="price text-white">$19.99</div>
 
-                    <button class="btn btn-primary rounded-5">Get Started</button>
+                    {% include 'landing-page/components/buttons/subscription.html.twig'%}
                 </div>
             </div>
 
@@ -50,13 +50,13 @@
                     <p>Premium AI Optimization</p>
                     <p>50 GB Hosting</p>
                     <p>Unlimited Users</p>
-                    <p>Sales and Marketing Dashbaord</p>
+                    <p>Sales and Marketing Dashboard</p>
                     <p>Premium Features</p>
                     <p>Unlimited Logs</p>
 
                     <div class="price text-primary">$29.99</div>
 
-                    <button class="btn bnt-lg btn-primary rounded-5">Get Started</button>
+                    {% include 'landing-page/components/buttons/subscription.html.twig'%}
                 </div>
             </div>
         </div>
