--- a/app/templates/landing-page/components/sections/newsletter/standard.html.twig
+++ b/app/templates/landing-page/components/sections/newsletter/standard.html.twig
@@ -5,7 +5,9 @@
         <p>Subscribe to our newsletter for tips on resume writing and job hunting.</p>
         <form class="d-flex justify-content-center mt-4">
             <input type="email" class="form-control w-50 rounded-5" placeholder="Enter your email">
-            <button class="btn btn-primary ms-2 rounded-5">Subscribe</button>
+
+            <button class="btn btn-primary ms-2 rounded-5">Subscribe
+
         </form>
     </div>
 </section>
