--- a/app/templates/landing-page/components/sections/header/fixed-top.html.twig
+++ b/app/templates/landing-page/components/sections/header/fixed-top.html.twig
@@ -3,7 +3,7 @@
     <nav class="navbar navbar-expand-md navbar-light fixed-top">
         <div class="container">
 
-            <a class="navbar-brand" href="#first-screen">AI Resume Builder</a>
+            <a class="navbar-brand" href="/">AI Resume Builder</a>
 
             <button
                 class="navbar-toggler"
@@ -40,6 +40,7 @@
                 </ul>
 
                 {% include 'landing-page/components/buttons/subscription.html.twig' with {'classes': 'ms-auto'} %}
+                {% include 'landing-page/components/buttons/login.html.twig' with {'isLink': true} %}
             </div>
 
         </div>
