--- a/app/templates/base.html.twig
+++ b/app/templates/base.html.twig
@@ -1,29 +1,83 @@
 <!DOCTYPE html>
-<html lang="en" data-bs-theme="light">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="apple-mobile-web-app-capable" content="yes">
+<html lang="en">
 
-        <title>{% block title %}Welcome!{% endblock %}</title>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{% block title %}{% if meta is defined and meta.title is defined %}{{ meta.title }}{% elseif title is defined %}{{ title }}{% else %}Welcome{% endif %}{% endblock %}</title>
 
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
-        <link href="{{ absolute_url(asset('css/bootstrap.min.css', 'bootstrap')) }}" rel="stylesheet">
-        <link rel="stylesheet" href="{{ absolute_url(asset('css/bootstrap-icons.min.css', 'bootstrap')) }}">
+    {% if meta is defined %}
+        {% include 'landing-page/meta.html.twig' %}
+    {% endif %}
 
-        {% block stylesheets %}
-        {% endblock %}
+    <style>
+        @font-face {
+            font-family: 'Aller Regular'; /*a name to be used later*/
+            src: url('{{ absolute_url(asset('fonts/Aller_Rg.ttf', 'css')) }}'); /*URL to font*/
+        }
+    </style>
 
-        {% block javascripts %}
-        {% endblock %}
-    </head>
-    <body>
-        {% block icons %}{% endblock %}
+    <link rel="stylesheet" href="{{ absolute_url(asset('css/bootstrap-icons.min.css', 'bootstrap')) }}">
+    <link href="{{ absolute_url(asset('css/bootstrap.min.css', 'bootstrap')) }}" rel="stylesheet">
+    <link rel="stylesheet" href="{{ absolute_url(asset('style.css', 'css')) }}">
 
-        {% block header %}{% endblock %}
+</head>
 
-        {% block content %}{% endblock %}
-        <script src="{{ absolute_url(asset('js/bootstrap.bundle.min.js', 'bootstrap')) }}"></script>
+<body>
 
-        {% block javascriptsendpage %}{% endblock %}
-    </body>
+{% block header %}
+
+<div id="header">
+    {% include "landing-page/components/sections/header/fixed-top.html.twig" %}
+</div>
+
+{% endblock %}
+
+{% block content %}
+    <div id="page-landing">
+{#        {% include "landing-page/components/sections/header/fixed-top.html.twig" %}#}
+        {% include 'landing-page/components/sections/first-screen/hero-with-button-and-cover.html.twig' %}
+        {% include 'landing-page/components/sections/features/3-in-row.html.twig' %}
+        {% include 'landing-page/components/sections/how-it-works/3-in-column-with-covers.html.twig' %}
+        {% include 'landing-page/components/sections/testimonial/carousel.html.twig' %}
+        {% include 'landing-page/components/sections/pricing/standard-3-in-row.html.twig' %}
+        {% include 'landing-page/components/sections/newsletter/standard.html.twig' %}
+        {% include 'landing-page/components/sections/footer/standard.html.twig' %}
+    </div>
+
+    {% include 'landing-page/components/sections/checkout/simple.html.twig' %}
+{% endblock %}
+
+<script src="{{ absolute_url(asset('js/bootstrap.bundle.min.js', 'bootstrap')) }}"></script>
+
+<script type="application/javascript">
+    const btnSubmitCheckout = document.getElementById("btn-submit-checkout");
+    const btnBackToLanding = document.getElementById("btn-back-to-landing");
+    const btnGoToPayment = document.querySelectorAll(".btn-goto-payment");
+    const pageLanding = document.getElementById("page-landing");
+    const pageCheckout = document.getElementById("page-checkout");
+
+    btnSubmitCheckout.addEventListener('click', function (e) {
+        console.log(this);
+        e.preventDefault();
+    });
+
+    btnBackToLanding.addEventListener('click', function (e) {
+        console.log(this);
+        e.preventDefault();
+        pageLanding.classList.toggle("d-none");
+        pageCheckout.classList.toggle("d-none");
+        window.scrollTo(0, 0);
+    });
+
+    console.log(btnGoToPayment);
+    btnGoToPayment.forEach((e) => e.addEventListener('click', function (e) {
+        console.log(this);
+        e.preventDefault();
+        pageLanding.classList.toggle("d-none");
+        pageCheckout.classList.toggle("d-none");
+    }));
+</script>
+
+</body>
 </html>
