fix user register and login

--- a/app/templates/login/login.html.twig
+++ b/app/templates/login/login.html.twig
@@ -29,7 +29,7 @@
                     <label for="inputEmail">Email</label>
                     <input type="email" value="{{ last_username }}"
                            name="email" id="inputEmail"
-                           class="form-control rounded-5 mb-3"
+                           class="form-control mb-3"
                            autocomplete="email" required autofocus
                     >
 
@@ -37,7 +37,7 @@
                     <input type="password"
                            name="password"
                            id="inputPassword"
-                           class="form-control rounded-5 mb-3"
+                           class="form-control mb-3"
                            autocomplete="current-password" required
                     >
 
