--- a/app/public/assets/css/style.css
+++ b/app/public/assets/css/style.css
@@ -187,10 +187,11 @@ body {
 }
 
 .alert-primary {
-    --bs-alert-color: var(--bs-primary-text-emphasis);
-    --bs-alert-bg: var(--bs-primary-bg-subtle);
-    --bs-alert-border-color: var(--bs-primary-border-subtle);
-    --bs-alert-link-color: var(--bs-primary-text-emphasis);
+    --bs-alert-color: var(--palette-color-black);
+    --bs-alert-bg: var(--palette-shades-100);
+    --bs-alert-border-color: var(--palette-shades-200);
+    --bs-alert-link-color: var(--palette-color-black);
+    box-shadow: 0px 8px 9px 0px rgba(96, 94, 94, 0.17), inset 0 3px 5px rgba(0, 0, 0, 0.125);
 }
 
 .alert-secondary {
@@ -198,27 +199,31 @@ body {
     --bs-alert-bg: var(--bs-secondary-bg-subtle);
     --bs-alert-border-color: var(--bs-secondary-border-subtle);
     --bs-alert-link-color: var(--bs-secondary-text-emphasis);
+    box-shadow: 0px 8px 9px 0px rgba(96, 94, 94, 0.17), inset 0 3px 5px rgba(0, 0, 0, 0.125);
 }
 
 .alert-success {
-    --bs-alert-color: var(--bs-success-text-emphasis);
-    --bs-alert-bg: var(--bs-success-bg-subtle);
-    --bs-alert-border-color: var(--bs-success-border-subtle);
-    --bs-alert-link-color: var(--bs-success-text-emphasis);
+    --bs-alert-color: var(--palette-color-black);
+    --bs-alert-bg: var(--palette-generic-400);
+    --bs-alert-border-color: var(--palette-generic-300);
+    --bs-alert-link-color: var(--palette-color-black);
+    box-shadow: 0px 8px 9px 0px rgba(96, 94, 94, 0.17), inset 0 3px 5px rgba(0, 0, 0, 0.125);
 }
 
 .alert-info {
-    --bs-alert-color: var(--bs-info-text-emphasis);
-    --bs-alert-bg: var(--bs-info-bg-subtle);
-    --bs-alert-border-color: var(--bs-info-border-subtle);
-    --bs-alert-link-color: var(--bs-info-text-emphasis);
+    --bs-alert-color: var(--palette-color-black);
+    --bs-alert-bg: var(--palette-generic-200);
+    --bs-alert-border-color: var(--palette-generic-200);
+    --bs-alert-link-color: var(--palette-color-black);
+    box-shadow: 0px 8px 9px 0px rgba(96, 94, 94, 0.17), inset 0 3px 5px rgba(0, 0, 0, 0.125);
 }
 
 .alert-warning {
-    --bs-alert-color: var(--bs-warning-text-emphasis);
-    --bs-alert-bg: var(--bs-warning-bg-subtle);
-    --bs-alert-border-color: var(--bs-warning-border-subtle);
-    --bs-alert-link-color: var(--bs-warning-text-emphasis);
+    --bs-alert-color: var(--palette-color-black);
+    --bs-alert-bg: var(--palette-generic-600);
+    --bs-alert-border-color: var(--palette-generic-600);
+    --bs-alert-link-color: var(--palette-color-black);
+    box-shadow: 0px 8px 9px 0px rgba(96, 94, 94, 0.17), inset 0 3px 5px rgba(0, 0, 0, 0.125);
 }
 
 .alert-danger {
