--- a/app/templates/landing-page/components/sections/header/fixed-top.html.twig
+++ b/app/templates/landing-page/components/sections/header/fixed-top.html.twig
@@ -1,6 +1,6 @@
 <!-- Header Section -->
 <header  class="header">
-    <nav class="navbar navbar-expand-md navbar-light fixed-top">
+    <nav class="navbar navbar-expand-md navbar-light">
         <div class="container">
 
             <a class="navbar-brand" href="/">AI Resume Builder</a>
