--- a/app/templates/landing-page/components/sections/checkout/simple.html.twig
+++ b/app/templates/landing-page/components/sections/checkout/simple.html.twig
@@ -1,4 +1,4 @@
-<div id="page-checkout" class="d-none">
+<div id="page-checkout" class="d-none pt-5">
 <div class="container pt-5 text-white">
     <div class="row">
 
