--- a/app/templates/login/login.html.twig
+++ b/app/templates/login/login.html.twig
@@ -14,7 +14,8 @@
                     <p class="text-center">You already in the system.</p>
 
                     <div class="text-center">
-                        <a href="{{ path('security_logout') }}" class="btn btn-primary rounded-5">Logout</a>
+                        <a href="{{ absolute_url(path('security_logout')) }}" class="btn btn-light rounded-5">Logout</a>
+                        <a href="{{ absolute_url(path('cp_user_show', {'user' : app.user.username})) }}" class="btn btn-primary rounded-5">Profile</a>
                     </div>
                 </div>
 
