--- a/app/templates/control-panel/components/header/fixed-top.html.twig
+++ b/app/templates/control-panel/components/header/fixed-top.html.twig
@@ -21,7 +21,7 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav me-auto mb-2 mb-md-0">
                     <li class="nav-item">
-                        <a class="nav-link {% if routeCurrent == 'cp_user_show' %}active{% endif %}" href="{{ absolute_url(path('cp_user_edit', {'user': app.user.username})) }}">Me</a>
+                        <a class="nav-link {% if routeCurrent == 'cp_user_show' %}active{% endif %}" href="{{ absolute_url(path('cp_user_show', {'user': app.user.username})) }}">Me</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link {% if routeCurrent == 'cp_project_list' %}active{% endif %}" href="#how-it-works">Projects</a>
