--- a/app/templates/control-panel/user/edit.html.twig
+++ b/app/templates/control-panel/user/edit.html.twig
@@ -5,6 +5,11 @@
     <div class="min-vh-100 pt-5">
         <div class="container pt-5 ">
             <div class="row gx-5 justify-content-center">
+                <div class="col-md-8 col-lg-5">
+                    {{ form(userEditForm, {'method': 'POST'}) }}
+                </div>
+            </div>
+            <div class="row gx-5 justify-content-center mt-5">
                 <div class="col-md-5 col-lg-3">
                     {{ form(userPasswordChangeForm, {'method': 'POST'}) }}
                 </div>
