--- a/app/templates/control-panel/user/show.html.twig
+++ b/app/templates/control-panel/user/show.html.twig
@@ -9,14 +9,51 @@
                 <div class="col-md-5 col-lg-3">
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item">{{ user.firstname }} {{ user.lastname }}</li>
-                        <li class="list-group-item">
-                            {{ user.email }}
-                            {% if user.isEmailVerified %}
-                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check text-success" viewBox="0 0 16 16">
-                                    <path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425z"/>
-                                </svg>
-                            {% else %}
+                        <li
+                            class="list-group-item"
 
+                            {% if user.isEmailVerified == false %}
+                            {% endif %}
+                        >
+                            {% if user.isEmailVerified %}
+                                <div
+                                    title="Verify email"
+                                >
+                                    <span>
+                                        {{ user.email }}
+                                    </span>
+                                    <svg
+                                        xmlns="http://www.w3.org/2000/svg"
+                                        width="16"
+                                        height="16"
+                                        fill="currentColor"
+                                        class="bi bi-check text-success"
+                                        viewBox="0 0 16 16"
+                                    >
+                                        <path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425z"/>
+                                    </svg>
+                                </div>
+
+                            {% else %}
+                                <a
+                                    href="{{ absolute_url(path('cp_user_verify_email', {'user': user.username})) }}"
+                                    class="text-danger text-decoration-none"
+                                    title="Verify email"
+                                >
+                                    <span>
+                                        {{ user.email }}
+                                    </span>
+                                    <svg
+                                        xmlns="http://www.w3.org/2000/svg"
+                                        width="16"
+                                        height="16"
+                                        fill="currentColor"
+                                        class="bi bi-dash-square-fill text-danger"
+                                        viewBox="0 0 16 16"
+                                    >
+                                        <path d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm2.5 7.5h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1 0-1"/>
+                                    </svg>
+                                </a>
                             {% endif %}
                         </li>
                         <li class="list-group-item">{% if user.isActive %}Active{% else %}Not Active{% endif %}</li>
