add project managing

--- a/app/templates/base.html.twig
+++ b/app/templates/base.html.twig
@@ -25,6 +25,8 @@
 
 <body class="">
 
+{% include'icons.html.twig' %}
+
 <div id="header" class="fixed-top">
     {% block header %}
         {% include "landing-page/components/sections/header/fixed-top.html.twig" %}
