--- a/app/public/assets/css/style.css
+++ b/app/public/assets/css/style.css
@@ -281,3 +281,8 @@ body {
     outline: 0;
     box-shadow: 0px 8px 9px 0px rgba(96, 94, 94, 0.17), inset 0 3px 5px rgba(0, 0, 0, 0.125);
 }
+
+.bi-08 {
+    width: 0.8rem;
+    height: 0.8rem;
+}
